parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> DECLARE declarations BEGIN commands END
Rule 2     program -> BEGIN commands END
Rule 3     declarations -> declarations COMMA pidentifier
Rule 4     declarations -> declarations COMMA pidentifier LEFT_BRACKET NUM COLON NUM RIGHT_BRACKET
Rule 5     declarations -> pidentifier
Rule 6     declarations -> pidentifier LEFT_BRACKET NUM COLON NUM RIGHT_BRACKET
Rule 7     commands -> commands command
Rule 8     commands -> command
Rule 9     command -> READ identifier SEMICOLON
Rule 10    command -> identifier ASSIGNMENT expression SEMICOLON
Rule 11    command -> WHILE condition DO commands ENDWHILE
Rule 12    command -> REPEAT commands UNTIL condition SEMICOLON
Rule 13    command -> FOR pidentifier FROM value TO value DO commands ENDFOR
Rule 14    command -> FOR pidentifier FROM value DOWNTO value DO commands ENDFOR
Rule 15    command -> IF if_occured condition THEN commands ELSE else_occured commands ENDIF
Rule 16    else_occured -> <empty>
Rule 17    command -> IF if_occured condition THEN commands ENDIF
Rule 18    if_occured -> <empty>
Rule 19    command -> WRITE value SEMICOLON
Rule 20    expression -> value
Rule 21    expression -> value ADD value
Rule 22    expression -> value SUB value
Rule 23    expression -> value MUL value
Rule 24    expression -> value DIV value
Rule 25    expression -> value MOD value
Rule 26    condition -> value EQUALS value
Rule 27    condition -> value NOT_EQUALS value
Rule 28    condition -> value LOWER value
Rule 29    condition -> value GREATER value
Rule 30    condition -> value LEQ value
Rule 31    condition -> value GEQ value
Rule 32    value -> NUM
Rule 33    value -> identifier
Rule 34    identifier -> pidentifier
Rule 35    identifier -> pidentifier LEFT_BRACKET pidentifier RIGHT_BRACKET
Rule 36    identifier -> pidentifier LEFT_BRACKET NUM RIGHT_BRACKET

Terminals, with rules where they appear

ADD                  : 21
ASSIGNMENT           : 10
BEGIN                : 1 2
COLON                : 4 6
COMMA                : 3 4
DECLARE              : 1
DIV                  : 24
DO                   : 11 13 14
DOWNTO               : 14
ELSE                 : 15
END                  : 1 2
ENDFOR               : 13 14
ENDIF                : 15 17
ENDWHILE             : 11
EQUALS               : 26
FOR                  : 13 14
FROM                 : 13 14
GEQ                  : 31
GREATER              : 29
IF                   : 15 17
LEFT_BRACKET         : 4 6 35 36
LEQ                  : 30
LOWER                : 28
MOD                  : 25
MUL                  : 23
NOT_EQUALS           : 27
NUM                  : 4 4 6 6 32 36
READ                 : 9
REPEAT               : 12
RIGHT_BRACKET        : 4 6 35 36
SEMICOLON            : 9 10 12 19
SUB                  : 22
THEN                 : 15 17
TO                   : 13
UNTIL                : 12
WHILE                : 11
WRITE                : 19
error                : 
pidentifier          : 3 4 5 6 13 14 34 35 35 36

Nonterminals, with rules where they appear

command              : 7 8
commands             : 1 2 7 11 12 13 14 15 15 17
condition            : 11 12 15 17
declarations         : 1 3 4
else_occured         : 15
expression           : 10
identifier           : 9 10 33
if_occured           : 15 17
program              : 0
value                : 13 13 14 14 19 20 21 21 22 22 23 23 24 24 25 25 26 26 27 27 28 28 29 29 30 30 31 31

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . DECLARE declarations BEGIN commands END
    (2) program -> . BEGIN commands END

    DECLARE         shift and go to state 2
    BEGIN           shift and go to state 3

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> DECLARE . declarations BEGIN commands END
    (3) declarations -> . declarations COMMA pidentifier
    (4) declarations -> . declarations COMMA pidentifier LEFT_BRACKET NUM COLON NUM RIGHT_BRACKET
    (5) declarations -> . pidentifier
    (6) declarations -> . pidentifier LEFT_BRACKET NUM COLON NUM RIGHT_BRACKET

    pidentifier     shift and go to state 5

    declarations                   shift and go to state 4

state 3

    (2) program -> BEGIN . commands END
    (7) commands -> . commands command
    (8) commands -> . command
    (9) command -> . READ identifier SEMICOLON
    (10) command -> . identifier ASSIGNMENT expression SEMICOLON
    (11) command -> . WHILE condition DO commands ENDWHILE
    (12) command -> . REPEAT commands UNTIL condition SEMICOLON
    (13) command -> . FOR pidentifier FROM value TO value DO commands ENDFOR
    (14) command -> . FOR pidentifier FROM value DOWNTO value DO commands ENDFOR
    (15) command -> . IF if_occured condition THEN commands ELSE else_occured commands ENDIF
    (17) command -> . IF if_occured condition THEN commands ENDIF
    (19) command -> . WRITE value SEMICOLON
    (34) identifier -> . pidentifier
    (35) identifier -> . pidentifier LEFT_BRACKET pidentifier RIGHT_BRACKET
    (36) identifier -> . pidentifier LEFT_BRACKET NUM RIGHT_BRACKET

    READ            shift and go to state 8
    WHILE           shift and go to state 10
    REPEAT          shift and go to state 11
    FOR             shift and go to state 12
    IF              shift and go to state 14
    WRITE           shift and go to state 15
    pidentifier     shift and go to state 13

    commands                       shift and go to state 6
    command                        shift and go to state 7
    identifier                     shift and go to state 9

state 4

    (1) program -> DECLARE declarations . BEGIN commands END
    (3) declarations -> declarations . COMMA pidentifier
    (4) declarations -> declarations . COMMA pidentifier LEFT_BRACKET NUM COLON NUM RIGHT_BRACKET

    BEGIN           shift and go to state 16
    COMMA           shift and go to state 17


state 5

    (5) declarations -> pidentifier .
    (6) declarations -> pidentifier . LEFT_BRACKET NUM COLON NUM RIGHT_BRACKET

    BEGIN           reduce using rule 5 (declarations -> pidentifier .)
    COMMA           reduce using rule 5 (declarations -> pidentifier .)
    LEFT_BRACKET    shift and go to state 18


state 6

    (2) program -> BEGIN commands . END
    (7) commands -> commands . command
    (9) command -> . READ identifier SEMICOLON
    (10) command -> . identifier ASSIGNMENT expression SEMICOLON
    (11) command -> . WHILE condition DO commands ENDWHILE
    (12) command -> . REPEAT commands UNTIL condition SEMICOLON
    (13) command -> . FOR pidentifier FROM value TO value DO commands ENDFOR
    (14) command -> . FOR pidentifier FROM value DOWNTO value DO commands ENDFOR
    (15) command -> . IF if_occured condition THEN commands ELSE else_occured commands ENDIF
    (17) command -> . IF if_occured condition THEN commands ENDIF
    (19) command -> . WRITE value SEMICOLON
    (34) identifier -> . pidentifier
    (35) identifier -> . pidentifier LEFT_BRACKET pidentifier RIGHT_BRACKET
    (36) identifier -> . pidentifier LEFT_BRACKET NUM RIGHT_BRACKET

    END             shift and go to state 19
    READ            shift and go to state 8
    WHILE           shift and go to state 10
    REPEAT          shift and go to state 11
    FOR             shift and go to state 12
    IF              shift and go to state 14
    WRITE           shift and go to state 15
    pidentifier     shift and go to state 13

    command                        shift and go to state 20
    identifier                     shift and go to state 9

state 7

    (8) commands -> command .

    END             reduce using rule 8 (commands -> command .)
    READ            reduce using rule 8 (commands -> command .)
    WHILE           reduce using rule 8 (commands -> command .)
    REPEAT          reduce using rule 8 (commands -> command .)
    FOR             reduce using rule 8 (commands -> command .)
    IF              reduce using rule 8 (commands -> command .)
    WRITE           reduce using rule 8 (commands -> command .)
    pidentifier     reduce using rule 8 (commands -> command .)
    UNTIL           reduce using rule 8 (commands -> command .)
    ENDWHILE        reduce using rule 8 (commands -> command .)
    ELSE            reduce using rule 8 (commands -> command .)
    ENDIF           reduce using rule 8 (commands -> command .)
    ENDFOR          reduce using rule 8 (commands -> command .)


state 8

    (9) command -> READ . identifier SEMICOLON
    (34) identifier -> . pidentifier
    (35) identifier -> . pidentifier LEFT_BRACKET pidentifier RIGHT_BRACKET
    (36) identifier -> . pidentifier LEFT_BRACKET NUM RIGHT_BRACKET

    pidentifier     shift and go to state 13

    identifier                     shift and go to state 21

state 9

    (10) command -> identifier . ASSIGNMENT expression SEMICOLON

    ASSIGNMENT      shift and go to state 22


state 10

    (11) command -> WHILE . condition DO commands ENDWHILE
    (26) condition -> . value EQUALS value
    (27) condition -> . value NOT_EQUALS value
    (28) condition -> . value LOWER value
    (29) condition -> . value GREATER value
    (30) condition -> . value LEQ value
    (31) condition -> . value GEQ value
    (32) value -> . NUM
    (33) value -> . identifier
    (34) identifier -> . pidentifier
    (35) identifier -> . pidentifier LEFT_BRACKET pidentifier RIGHT_BRACKET
    (36) identifier -> . pidentifier LEFT_BRACKET NUM RIGHT_BRACKET

    NUM             shift and go to state 25
    pidentifier     shift and go to state 13

    condition                      shift and go to state 23
    value                          shift and go to state 24
    identifier                     shift and go to state 26

state 11

    (12) command -> REPEAT . commands UNTIL condition SEMICOLON
    (7) commands -> . commands command
    (8) commands -> . command
    (9) command -> . READ identifier SEMICOLON
    (10) command -> . identifier ASSIGNMENT expression SEMICOLON
    (11) command -> . WHILE condition DO commands ENDWHILE
    (12) command -> . REPEAT commands UNTIL condition SEMICOLON
    (13) command -> . FOR pidentifier FROM value TO value DO commands ENDFOR
    (14) command -> . FOR pidentifier FROM value DOWNTO value DO commands ENDFOR
    (15) command -> . IF if_occured condition THEN commands ELSE else_occured commands ENDIF
    (17) command -> . IF if_occured condition THEN commands ENDIF
    (19) command -> . WRITE value SEMICOLON
    (34) identifier -> . pidentifier
    (35) identifier -> . pidentifier LEFT_BRACKET pidentifier RIGHT_BRACKET
    (36) identifier -> . pidentifier LEFT_BRACKET NUM RIGHT_BRACKET

    READ            shift and go to state 8
    WHILE           shift and go to state 10
    REPEAT          shift and go to state 11
    FOR             shift and go to state 12
    IF              shift and go to state 14
    WRITE           shift and go to state 15
    pidentifier     shift and go to state 13

    commands                       shift and go to state 27
    command                        shift and go to state 7
    identifier                     shift and go to state 9

state 12

    (13) command -> FOR . pidentifier FROM value TO value DO commands ENDFOR
    (14) command -> FOR . pidentifier FROM value DOWNTO value DO commands ENDFOR

    pidentifier     shift and go to state 28


state 13

    (34) identifier -> pidentifier .
    (35) identifier -> pidentifier . LEFT_BRACKET pidentifier RIGHT_BRACKET
    (36) identifier -> pidentifier . LEFT_BRACKET NUM RIGHT_BRACKET

    ASSIGNMENT      reduce using rule 34 (identifier -> pidentifier .)
    SEMICOLON       reduce using rule 34 (identifier -> pidentifier .)
    EQUALS          reduce using rule 34 (identifier -> pidentifier .)
    NOT_EQUALS      reduce using rule 34 (identifier -> pidentifier .)
    LOWER           reduce using rule 34 (identifier -> pidentifier .)
    GREATER         reduce using rule 34 (identifier -> pidentifier .)
    LEQ             reduce using rule 34 (identifier -> pidentifier .)
    GEQ             reduce using rule 34 (identifier -> pidentifier .)
    ADD             reduce using rule 34 (identifier -> pidentifier .)
    SUB             reduce using rule 34 (identifier -> pidentifier .)
    MUL             reduce using rule 34 (identifier -> pidentifier .)
    DIV             reduce using rule 34 (identifier -> pidentifier .)
    MOD             reduce using rule 34 (identifier -> pidentifier .)
    DO              reduce using rule 34 (identifier -> pidentifier .)
    THEN            reduce using rule 34 (identifier -> pidentifier .)
    TO              reduce using rule 34 (identifier -> pidentifier .)
    DOWNTO          reduce using rule 34 (identifier -> pidentifier .)
    LEFT_BRACKET    shift and go to state 29


state 14

    (15) command -> IF . if_occured condition THEN commands ELSE else_occured commands ENDIF
    (17) command -> IF . if_occured condition THEN commands ENDIF
    (18) if_occured -> .

    NUM             reduce using rule 18 (if_occured -> .)
    pidentifier     reduce using rule 18 (if_occured -> .)

    if_occured                     shift and go to state 30

state 15

    (19) command -> WRITE . value SEMICOLON
    (32) value -> . NUM
    (33) value -> . identifier
    (34) identifier -> . pidentifier
    (35) identifier -> . pidentifier LEFT_BRACKET pidentifier RIGHT_BRACKET
    (36) identifier -> . pidentifier LEFT_BRACKET NUM RIGHT_BRACKET

    NUM             shift and go to state 25
    pidentifier     shift and go to state 13

    value                          shift and go to state 31
    identifier                     shift and go to state 26

state 16

    (1) program -> DECLARE declarations BEGIN . commands END
    (7) commands -> . commands command
    (8) commands -> . command
    (9) command -> . READ identifier SEMICOLON
    (10) command -> . identifier ASSIGNMENT expression SEMICOLON
    (11) command -> . WHILE condition DO commands ENDWHILE
    (12) command -> . REPEAT commands UNTIL condition SEMICOLON
    (13) command -> . FOR pidentifier FROM value TO value DO commands ENDFOR
    (14) command -> . FOR pidentifier FROM value DOWNTO value DO commands ENDFOR
    (15) command -> . IF if_occured condition THEN commands ELSE else_occured commands ENDIF
    (17) command -> . IF if_occured condition THEN commands ENDIF
    (19) command -> . WRITE value SEMICOLON
    (34) identifier -> . pidentifier
    (35) identifier -> . pidentifier LEFT_BRACKET pidentifier RIGHT_BRACKET
    (36) identifier -> . pidentifier LEFT_BRACKET NUM RIGHT_BRACKET

    READ            shift and go to state 8
    WHILE           shift and go to state 10
    REPEAT          shift and go to state 11
    FOR             shift and go to state 12
    IF              shift and go to state 14
    WRITE           shift and go to state 15
    pidentifier     shift and go to state 13

    commands                       shift and go to state 32
    command                        shift and go to state 7
    identifier                     shift and go to state 9

state 17

    (3) declarations -> declarations COMMA . pidentifier
    (4) declarations -> declarations COMMA . pidentifier LEFT_BRACKET NUM COLON NUM RIGHT_BRACKET

    pidentifier     shift and go to state 33


state 18

    (6) declarations -> pidentifier LEFT_BRACKET . NUM COLON NUM RIGHT_BRACKET

    NUM             shift and go to state 34


state 19

    (2) program -> BEGIN commands END .

    $end            reduce using rule 2 (program -> BEGIN commands END .)


state 20

    (7) commands -> commands command .

    END             reduce using rule 7 (commands -> commands command .)
    READ            reduce using rule 7 (commands -> commands command .)
    WHILE           reduce using rule 7 (commands -> commands command .)
    REPEAT          reduce using rule 7 (commands -> commands command .)
    FOR             reduce using rule 7 (commands -> commands command .)
    IF              reduce using rule 7 (commands -> commands command .)
    WRITE           reduce using rule 7 (commands -> commands command .)
    pidentifier     reduce using rule 7 (commands -> commands command .)
    UNTIL           reduce using rule 7 (commands -> commands command .)
    ENDWHILE        reduce using rule 7 (commands -> commands command .)
    ELSE            reduce using rule 7 (commands -> commands command .)
    ENDIF           reduce using rule 7 (commands -> commands command .)
    ENDFOR          reduce using rule 7 (commands -> commands command .)


state 21

    (9) command -> READ identifier . SEMICOLON

    SEMICOLON       shift and go to state 35


state 22

    (10) command -> identifier ASSIGNMENT . expression SEMICOLON
    (20) expression -> . value
    (21) expression -> . value ADD value
    (22) expression -> . value SUB value
    (23) expression -> . value MUL value
    (24) expression -> . value DIV value
    (25) expression -> . value MOD value
    (32) value -> . NUM
    (33) value -> . identifier
    (34) identifier -> . pidentifier
    (35) identifier -> . pidentifier LEFT_BRACKET pidentifier RIGHT_BRACKET
    (36) identifier -> . pidentifier LEFT_BRACKET NUM RIGHT_BRACKET

    NUM             shift and go to state 25
    pidentifier     shift and go to state 13

    identifier                     shift and go to state 26
    expression                     shift and go to state 36
    value                          shift and go to state 37

state 23

    (11) command -> WHILE condition . DO commands ENDWHILE

    DO              shift and go to state 38


state 24

    (26) condition -> value . EQUALS value
    (27) condition -> value . NOT_EQUALS value
    (28) condition -> value . LOWER value
    (29) condition -> value . GREATER value
    (30) condition -> value . LEQ value
    (31) condition -> value . GEQ value

    EQUALS          shift and go to state 39
    NOT_EQUALS      shift and go to state 40
    LOWER           shift and go to state 41
    GREATER         shift and go to state 42
    LEQ             shift and go to state 43
    GEQ             shift and go to state 44


state 25

    (32) value -> NUM .

    EQUALS          reduce using rule 32 (value -> NUM .)
    NOT_EQUALS      reduce using rule 32 (value -> NUM .)
    LOWER           reduce using rule 32 (value -> NUM .)
    GREATER         reduce using rule 32 (value -> NUM .)
    LEQ             reduce using rule 32 (value -> NUM .)
    GEQ             reduce using rule 32 (value -> NUM .)
    SEMICOLON       reduce using rule 32 (value -> NUM .)
    ADD             reduce using rule 32 (value -> NUM .)
    SUB             reduce using rule 32 (value -> NUM .)
    MUL             reduce using rule 32 (value -> NUM .)
    DIV             reduce using rule 32 (value -> NUM .)
    MOD             reduce using rule 32 (value -> NUM .)
    DO              reduce using rule 32 (value -> NUM .)
    THEN            reduce using rule 32 (value -> NUM .)
    TO              reduce using rule 32 (value -> NUM .)
    DOWNTO          reduce using rule 32 (value -> NUM .)


state 26

    (33) value -> identifier .

    EQUALS          reduce using rule 33 (value -> identifier .)
    NOT_EQUALS      reduce using rule 33 (value -> identifier .)
    LOWER           reduce using rule 33 (value -> identifier .)
    GREATER         reduce using rule 33 (value -> identifier .)
    LEQ             reduce using rule 33 (value -> identifier .)
    GEQ             reduce using rule 33 (value -> identifier .)
    SEMICOLON       reduce using rule 33 (value -> identifier .)
    ADD             reduce using rule 33 (value -> identifier .)
    SUB             reduce using rule 33 (value -> identifier .)
    MUL             reduce using rule 33 (value -> identifier .)
    DIV             reduce using rule 33 (value -> identifier .)
    MOD             reduce using rule 33 (value -> identifier .)
    DO              reduce using rule 33 (value -> identifier .)
    THEN            reduce using rule 33 (value -> identifier .)
    TO              reduce using rule 33 (value -> identifier .)
    DOWNTO          reduce using rule 33 (value -> identifier .)


state 27

    (12) command -> REPEAT commands . UNTIL condition SEMICOLON
    (7) commands -> commands . command
    (9) command -> . READ identifier SEMICOLON
    (10) command -> . identifier ASSIGNMENT expression SEMICOLON
    (11) command -> . WHILE condition DO commands ENDWHILE
    (12) command -> . REPEAT commands UNTIL condition SEMICOLON
    (13) command -> . FOR pidentifier FROM value TO value DO commands ENDFOR
    (14) command -> . FOR pidentifier FROM value DOWNTO value DO commands ENDFOR
    (15) command -> . IF if_occured condition THEN commands ELSE else_occured commands ENDIF
    (17) command -> . IF if_occured condition THEN commands ENDIF
    (19) command -> . WRITE value SEMICOLON
    (34) identifier -> . pidentifier
    (35) identifier -> . pidentifier LEFT_BRACKET pidentifier RIGHT_BRACKET
    (36) identifier -> . pidentifier LEFT_BRACKET NUM RIGHT_BRACKET

    UNTIL           shift and go to state 45
    READ            shift and go to state 8
    WHILE           shift and go to state 10
    REPEAT          shift and go to state 11
    FOR             shift and go to state 12
    IF              shift and go to state 14
    WRITE           shift and go to state 15
    pidentifier     shift and go to state 13

    command                        shift and go to state 20
    identifier                     shift and go to state 9

state 28

    (13) command -> FOR pidentifier . FROM value TO value DO commands ENDFOR
    (14) command -> FOR pidentifier . FROM value DOWNTO value DO commands ENDFOR

    FROM            shift and go to state 46


state 29

    (35) identifier -> pidentifier LEFT_BRACKET . pidentifier RIGHT_BRACKET
    (36) identifier -> pidentifier LEFT_BRACKET . NUM RIGHT_BRACKET

    pidentifier     shift and go to state 47
    NUM             shift and go to state 48


state 30

    (15) command -> IF if_occured . condition THEN commands ELSE else_occured commands ENDIF
    (17) command -> IF if_occured . condition THEN commands ENDIF
    (26) condition -> . value EQUALS value
    (27) condition -> . value NOT_EQUALS value
    (28) condition -> . value LOWER value
    (29) condition -> . value GREATER value
    (30) condition -> . value LEQ value
    (31) condition -> . value GEQ value
    (32) value -> . NUM
    (33) value -> . identifier
    (34) identifier -> . pidentifier
    (35) identifier -> . pidentifier LEFT_BRACKET pidentifier RIGHT_BRACKET
    (36) identifier -> . pidentifier LEFT_BRACKET NUM RIGHT_BRACKET

    NUM             shift and go to state 25
    pidentifier     shift and go to state 13

    condition                      shift and go to state 49
    value                          shift and go to state 24
    identifier                     shift and go to state 26

state 31

    (19) command -> WRITE value . SEMICOLON

    SEMICOLON       shift and go to state 50


state 32

    (1) program -> DECLARE declarations BEGIN commands . END
    (7) commands -> commands . command
    (9) command -> . READ identifier SEMICOLON
    (10) command -> . identifier ASSIGNMENT expression SEMICOLON
    (11) command -> . WHILE condition DO commands ENDWHILE
    (12) command -> . REPEAT commands UNTIL condition SEMICOLON
    (13) command -> . FOR pidentifier FROM value TO value DO commands ENDFOR
    (14) command -> . FOR pidentifier FROM value DOWNTO value DO commands ENDFOR
    (15) command -> . IF if_occured condition THEN commands ELSE else_occured commands ENDIF
    (17) command -> . IF if_occured condition THEN commands ENDIF
    (19) command -> . WRITE value SEMICOLON
    (34) identifier -> . pidentifier
    (35) identifier -> . pidentifier LEFT_BRACKET pidentifier RIGHT_BRACKET
    (36) identifier -> . pidentifier LEFT_BRACKET NUM RIGHT_BRACKET

    END             shift and go to state 51
    READ            shift and go to state 8
    WHILE           shift and go to state 10
    REPEAT          shift and go to state 11
    FOR             shift and go to state 12
    IF              shift and go to state 14
    WRITE           shift and go to state 15
    pidentifier     shift and go to state 13

    command                        shift and go to state 20
    identifier                     shift and go to state 9

state 33

    (3) declarations -> declarations COMMA pidentifier .
    (4) declarations -> declarations COMMA pidentifier . LEFT_BRACKET NUM COLON NUM RIGHT_BRACKET

    BEGIN           reduce using rule 3 (declarations -> declarations COMMA pidentifier .)
    COMMA           reduce using rule 3 (declarations -> declarations COMMA pidentifier .)
    LEFT_BRACKET    shift and go to state 52


state 34

    (6) declarations -> pidentifier LEFT_BRACKET NUM . COLON NUM RIGHT_BRACKET

    COLON           shift and go to state 53


state 35

    (9) command -> READ identifier SEMICOLON .

    END             reduce using rule 9 (command -> READ identifier SEMICOLON .)
    READ            reduce using rule 9 (command -> READ identifier SEMICOLON .)
    WHILE           reduce using rule 9 (command -> READ identifier SEMICOLON .)
    REPEAT          reduce using rule 9 (command -> READ identifier SEMICOLON .)
    FOR             reduce using rule 9 (command -> READ identifier SEMICOLON .)
    IF              reduce using rule 9 (command -> READ identifier SEMICOLON .)
    WRITE           reduce using rule 9 (command -> READ identifier SEMICOLON .)
    pidentifier     reduce using rule 9 (command -> READ identifier SEMICOLON .)
    UNTIL           reduce using rule 9 (command -> READ identifier SEMICOLON .)
    ENDWHILE        reduce using rule 9 (command -> READ identifier SEMICOLON .)
    ELSE            reduce using rule 9 (command -> READ identifier SEMICOLON .)
    ENDIF           reduce using rule 9 (command -> READ identifier SEMICOLON .)
    ENDFOR          reduce using rule 9 (command -> READ identifier SEMICOLON .)


state 36

    (10) command -> identifier ASSIGNMENT expression . SEMICOLON

    SEMICOLON       shift and go to state 54


state 37

    (20) expression -> value .
    (21) expression -> value . ADD value
    (22) expression -> value . SUB value
    (23) expression -> value . MUL value
    (24) expression -> value . DIV value
    (25) expression -> value . MOD value

    SEMICOLON       reduce using rule 20 (expression -> value .)
    ADD             shift and go to state 55
    SUB             shift and go to state 56
    MUL             shift and go to state 57
    DIV             shift and go to state 58
    MOD             shift and go to state 59


state 38

    (11) command -> WHILE condition DO . commands ENDWHILE
    (7) commands -> . commands command
    (8) commands -> . command
    (9) command -> . READ identifier SEMICOLON
    (10) command -> . identifier ASSIGNMENT expression SEMICOLON
    (11) command -> . WHILE condition DO commands ENDWHILE
    (12) command -> . REPEAT commands UNTIL condition SEMICOLON
    (13) command -> . FOR pidentifier FROM value TO value DO commands ENDFOR
    (14) command -> . FOR pidentifier FROM value DOWNTO value DO commands ENDFOR
    (15) command -> . IF if_occured condition THEN commands ELSE else_occured commands ENDIF
    (17) command -> . IF if_occured condition THEN commands ENDIF
    (19) command -> . WRITE value SEMICOLON
    (34) identifier -> . pidentifier
    (35) identifier -> . pidentifier LEFT_BRACKET pidentifier RIGHT_BRACKET
    (36) identifier -> . pidentifier LEFT_BRACKET NUM RIGHT_BRACKET

    READ            shift and go to state 8
    WHILE           shift and go to state 10
    REPEAT          shift and go to state 11
    FOR             shift and go to state 12
    IF              shift and go to state 14
    WRITE           shift and go to state 15
    pidentifier     shift and go to state 13

    commands                       shift and go to state 60
    command                        shift and go to state 7
    identifier                     shift and go to state 9

state 39

    (26) condition -> value EQUALS . value
    (32) value -> . NUM
    (33) value -> . identifier
    (34) identifier -> . pidentifier
    (35) identifier -> . pidentifier LEFT_BRACKET pidentifier RIGHT_BRACKET
    (36) identifier -> . pidentifier LEFT_BRACKET NUM RIGHT_BRACKET

    NUM             shift and go to state 25
    pidentifier     shift and go to state 13

    value                          shift and go to state 61
    identifier                     shift and go to state 26

state 40

    (27) condition -> value NOT_EQUALS . value
    (32) value -> . NUM
    (33) value -> . identifier
    (34) identifier -> . pidentifier
    (35) identifier -> . pidentifier LEFT_BRACKET pidentifier RIGHT_BRACKET
    (36) identifier -> . pidentifier LEFT_BRACKET NUM RIGHT_BRACKET

    NUM             shift and go to state 25
    pidentifier     shift and go to state 13

    value                          shift and go to state 62
    identifier                     shift and go to state 26

state 41

    (28) condition -> value LOWER . value
    (32) value -> . NUM
    (33) value -> . identifier
    (34) identifier -> . pidentifier
    (35) identifier -> . pidentifier LEFT_BRACKET pidentifier RIGHT_BRACKET
    (36) identifier -> . pidentifier LEFT_BRACKET NUM RIGHT_BRACKET

    NUM             shift and go to state 25
    pidentifier     shift and go to state 13

    value                          shift and go to state 63
    identifier                     shift and go to state 26

state 42

    (29) condition -> value GREATER . value
    (32) value -> . NUM
    (33) value -> . identifier
    (34) identifier -> . pidentifier
    (35) identifier -> . pidentifier LEFT_BRACKET pidentifier RIGHT_BRACKET
    (36) identifier -> . pidentifier LEFT_BRACKET NUM RIGHT_BRACKET

    NUM             shift and go to state 25
    pidentifier     shift and go to state 13

    value                          shift and go to state 64
    identifier                     shift and go to state 26

state 43

    (30) condition -> value LEQ . value
    (32) value -> . NUM
    (33) value -> . identifier
    (34) identifier -> . pidentifier
    (35) identifier -> . pidentifier LEFT_BRACKET pidentifier RIGHT_BRACKET
    (36) identifier -> . pidentifier LEFT_BRACKET NUM RIGHT_BRACKET

    NUM             shift and go to state 25
    pidentifier     shift and go to state 13

    value                          shift and go to state 65
    identifier                     shift and go to state 26

state 44

    (31) condition -> value GEQ . value
    (32) value -> . NUM
    (33) value -> . identifier
    (34) identifier -> . pidentifier
    (35) identifier -> . pidentifier LEFT_BRACKET pidentifier RIGHT_BRACKET
    (36) identifier -> . pidentifier LEFT_BRACKET NUM RIGHT_BRACKET

    NUM             shift and go to state 25
    pidentifier     shift and go to state 13

    value                          shift and go to state 66
    identifier                     shift and go to state 26

state 45

    (12) command -> REPEAT commands UNTIL . condition SEMICOLON
    (26) condition -> . value EQUALS value
    (27) condition -> . value NOT_EQUALS value
    (28) condition -> . value LOWER value
    (29) condition -> . value GREATER value
    (30) condition -> . value LEQ value
    (31) condition -> . value GEQ value
    (32) value -> . NUM
    (33) value -> . identifier
    (34) identifier -> . pidentifier
    (35) identifier -> . pidentifier LEFT_BRACKET pidentifier RIGHT_BRACKET
    (36) identifier -> . pidentifier LEFT_BRACKET NUM RIGHT_BRACKET

    NUM             shift and go to state 25
    pidentifier     shift and go to state 13

    condition                      shift and go to state 67
    value                          shift and go to state 24
    identifier                     shift and go to state 26

state 46

    (13) command -> FOR pidentifier FROM . value TO value DO commands ENDFOR
    (14) command -> FOR pidentifier FROM . value DOWNTO value DO commands ENDFOR
    (32) value -> . NUM
    (33) value -> . identifier
    (34) identifier -> . pidentifier
    (35) identifier -> . pidentifier LEFT_BRACKET pidentifier RIGHT_BRACKET
    (36) identifier -> . pidentifier LEFT_BRACKET NUM RIGHT_BRACKET

    NUM             shift and go to state 25
    pidentifier     shift and go to state 13

    value                          shift and go to state 68
    identifier                     shift and go to state 26

state 47

    (35) identifier -> pidentifier LEFT_BRACKET pidentifier . RIGHT_BRACKET

    RIGHT_BRACKET   shift and go to state 69


state 48

    (36) identifier -> pidentifier LEFT_BRACKET NUM . RIGHT_BRACKET

    RIGHT_BRACKET   shift and go to state 70


state 49

    (15) command -> IF if_occured condition . THEN commands ELSE else_occured commands ENDIF
    (17) command -> IF if_occured condition . THEN commands ENDIF

    THEN            shift and go to state 71


state 50

    (19) command -> WRITE value SEMICOLON .

    END             reduce using rule 19 (command -> WRITE value SEMICOLON .)
    READ            reduce using rule 19 (command -> WRITE value SEMICOLON .)
    WHILE           reduce using rule 19 (command -> WRITE value SEMICOLON .)
    REPEAT          reduce using rule 19 (command -> WRITE value SEMICOLON .)
    FOR             reduce using rule 19 (command -> WRITE value SEMICOLON .)
    IF              reduce using rule 19 (command -> WRITE value SEMICOLON .)
    WRITE           reduce using rule 19 (command -> WRITE value SEMICOLON .)
    pidentifier     reduce using rule 19 (command -> WRITE value SEMICOLON .)
    UNTIL           reduce using rule 19 (command -> WRITE value SEMICOLON .)
    ENDWHILE        reduce using rule 19 (command -> WRITE value SEMICOLON .)
    ELSE            reduce using rule 19 (command -> WRITE value SEMICOLON .)
    ENDIF           reduce using rule 19 (command -> WRITE value SEMICOLON .)
    ENDFOR          reduce using rule 19 (command -> WRITE value SEMICOLON .)


state 51

    (1) program -> DECLARE declarations BEGIN commands END .

    $end            reduce using rule 1 (program -> DECLARE declarations BEGIN commands END .)


state 52

    (4) declarations -> declarations COMMA pidentifier LEFT_BRACKET . NUM COLON NUM RIGHT_BRACKET

    NUM             shift and go to state 72


state 53

    (6) declarations -> pidentifier LEFT_BRACKET NUM COLON . NUM RIGHT_BRACKET

    NUM             shift and go to state 73


state 54

    (10) command -> identifier ASSIGNMENT expression SEMICOLON .
